# pykari

./: CHANGELOG.md  README.md  index.html  pyproject.toml
_static/: styles.css
docs/: Makefile  _pykari.yaml  index.md
docs/_static/: styles.css
docs/_templates/: default.html  index.html
docs/howto/: howto-configure.md  howto-template.md
docs/user-guide/: cli.md  configuration.md  installation.md  markdown.md  organization.md  static.md
howto/: howto-configure.html  howto-template.html
src/pykari/: __main__.py  build.py  setup.py
user-guide/: cli.html  configuration.html  installation.html  markdown.html  organization.html  static.html
