[build-system]
requires = ["setuptools >= 75.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pykari"
version = "0.1.0"
authors = [ { name="Elijah Greenstein" } ]
description = "Simple static site generator."
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
dependencies = [
  "headingmd",
  "highlight-it",
  "jinja2",
  "markdown-it-py",
  "mdit-py-plugins",
  "pygments",
  "pyyaml",
]

[project.optional-dependencies]
testing = [
  "pytest",
]

[project.scripts]
pykari = "pykari:__main__.main"
